<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lynca</string>
    <string name="bienvenido">¡Bienvenido,</string>
    <string name="buscar_instalaciones">Buscar instalaciones...</string>
    <string name="featured_facilities">Instalaciones destacadas</string>
    <string name="popular_near_you">Popular cerca de ti</string>
    <string name="book_now">RESERVAR YA</string>
    <string name="search">Buscar</string>
    <string name="home">Inicio</string>
    <string name="bookings">Reservas</string>
    <string name="profile">Perfil</string>
    <string name="mis_reservas">Mis reservas</string>
    <string name="reservadas">Reservadas</string>
    <string name="pasadas">Pasadas</string>
    <string name="reservar">Reservar</string>
    <string name="cancelar">Cancelar</string>
    <string name="seleccionar_fecha">Seleccionar fecha</string>
    <string name="horas_disponibles">Horas disponibles</string>
    <string name="sobre_esta_pista">Sobre esta pista</string>
    <string name="reviews">Reviews</string>
    <string name="ver_todas">Ver todas</string>
    <string name="mi_cuenta">MI CUENTA</string>
    <string name="preferencias">PREFERENCIAS</string>
    <string name="soporte">SOPORTE</string>
    <string name="cuenta">CUENTA</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="modo_nocturno">Modo nocturno</string>
    <string name="idioma">Idioma</string>
    <string name="ayuda_soporte">Ayuda y soporte</string>
    <string name="terminos">Términos y condiciones</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="eliminar_cuenta">Eliminar cuenta</string>
    <string name="seleccionar_idioma">Seleccionar idioma</string>
    <string name="inicio_sesion">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="email">Email</string>
    <string name="contrasena">Contraseña</string>
    <string name="olvide_contrasena">¿Olvidaste tu contraseña?</string>
    <string name="no_cuenta">¿No tienes cuenta?</string>
    <string name="si_cuenta">¿Ya tienes cuenta?</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="codigo_postal">Código postal</string>
    <string name="reservas_stat">Reservas</string>
    <string name="favorito">Favorito</string>
    <string name="miembro">Miembro</string>
    <string name="hora">/ hora</string>
    <string name="proximamente">Función próximamente disponible</string>
</resources>